# Mastering-Graphics-Programming-with-Vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.py
binaries/data/: sphere.mtl
project/: RaptorEngine.sln  RaptorEngine_Chapter1.vcxproj  RaptorEngine_Chapter1.vcxproj.filters  RaptorEngine_Chapter10.vcxproj  RaptorEngine_Chapter10.vcxproj.filters  RaptorEngine_Chapter11.vcxproj  RaptorEngine_Chapter11.vcxproj.filters  RaptorEngine_Chapter12.vcxproj  RaptorEngine_Chapter12.vcxproj.filters  RaptorEngine_Chapter13.vcxproj  RaptorEngine_Chapter13.vcxproj.filters  RaptorEngine_Chapter14.vcxproj  RaptorEngine_Chapter14.vcxproj.filters  RaptorEngine_Chapter15.vcxproj  RaptorEngine_Chapter15.vcxproj.filters  RaptorEngine_Chapter2.vcxproj  RaptorEngine_Chapter2.vcxproj.filters  RaptorEngine_Chapter3.vcxproj  RaptorEngine_Chapter3.vcxproj.filters  RaptorEngine_Chapter4.vcxproj  RaptorEngine_Chapter4.vcxproj.filters  RaptorEngine_Chapter5.vcxproj  RaptorEngine_Chapter5.vcxproj.filters  RaptorEngine_Chapter6.vcxproj  RaptorEngine_Chapter6.vcxproj.filters  RaptorEngine_Chapter7.vcxproj  RaptorEngine_Chapter7.vcxproj.filters  RaptorEngine_Chapter8.vcxproj  RaptorEngine_Chapter8.vcxproj.filters  RaptorEngine_Chapter9.vcxproj  RaptorEngine_Chapter9.vcxproj.filters
source/chapter1/: CMakeLists.txt  main.cpp
source/chapter1/graphics/: command_buffer.cpp  command_buffer.hpp  gpu_device.cpp  gpu_device.hpp  gpu_resources.cpp  gpu_resources.hpp  raptor_imgui.cpp  renderer.cpp  renderer.hpp
source/chapter10/: CMakeLists.txt  graph.json  graph_meshlet.json  graph_ray_tracing.json  main.cpp
source/chapter10/graphics/: command_buffer.cpp  command_buffer.hpp  frame_graph.cpp  frame_graph.hpp  gltf_scene.cpp  gpu_device.cpp  gpu_device.hpp  gpu_resources.cpp  gpu_resources.hpp  obj_scene.cpp  render_scene.cpp  render_scene.hpp  scene_graph.cpp  spirv_parser.cpp
source/chapter10/shaders/: culling.json  debug_mesh.glsl  depth.glsl  gbuffer.glsl  lighting.h  pbr.glsl  platform.h  ray_tracing.glsl  ray_tracing.json  scene.h  volumetric_fog.glsl
source/chapter11/: CMakeLists.txt  graph.json  graph_ray_tracing.json  main.cpp
source/chapter11/graphics/: command_buffer.cpp  frame_graph.cpp  frame_graph.hpp  gltf_scene.cpp  gpu_device.cpp  gpu_device.hpp  gpu_profiler.hpp  gpu_resources.hpp  raptor_imgui.hpp  render_resources_loader.cpp  render_scene.cpp  render_scene.hpp
source/chapter11/shaders/: dof.glsl  lighting.h  pbr.glsl  platform.h  ray_tracing.glsl  ray_tracing.json
source/chapter12/: CMakeLists.txt  graph_ray_tracing.json  main.cpp
source/chapter12/graphics/: frame_graph.cpp  frame_graph.hpp  gltf_scene.cpp  gltf_scene.hpp  gpu_device.cpp  gpu_device.hpp  gpu_profiler.cpp  gpu_resources.cpp  gpu_resources.hpp  obj_scene.cpp  obj_scene.hpp  raptor_imgui.cpp  render_scene.cpp  render_scene.hpp  spirv_parser.cpp
source/chapter12/shaders/: cloth.glsl  culling.glsl  debug_line.glsl  debug_rendering.h  depth_skinned.vert  dof.json  fullscreen.glsl  fullscreen.json  lighting.h  mesh.h  meshlet.glsl  pbr.glsl  ray_tracing.glsl  ray_tracing.json  scene.h
source/chapter13/: CMakeLists.txt  graph_ray_tracing.json  main.cpp
source/chapter13/graphics/: frame_graph.cpp  frame_graph.hpp  gltf_scene.hpp  gpu_device.cpp  gpu_device.hpp  gpu_enum.hpp  gpu_profiler.hpp  gpu_resources.cpp  gpu_resources.hpp  obj_scene.cpp  render_scene.cpp  render_scene.hpp  scene_graph.cpp
source/chapter13/shaders/: lighting.h  meshlet.glsl  meshlet.json  pbr.glsl  pbr_lighting.json  platform.h  reflections.glsl  reflections.json
source/chapter14/: CMakeLists.txt  graph.json  graph_ray_tracing.json  main.cpp
source/chapter14/graphics/: frame_graph.cpp  frame_graph.hpp  gltf_scene.cpp  gpu_device.cpp  gpu_enum.hpp  gpu_profiler.cpp  render_resources_loader.hpp  render_scene.cpp  render_scene.hpp
source/chapter14/shaders/: ddgi.h  ddgi.json  debug.json  debug_rendering.h  fullscreen.glsl  fullscreen.json  lighting.h  mesh.h  pbr.glsl  skinning.glsl  transparent.glsl
source/chapter15/: CMakeLists.txt  graph_ray_tracing.json  main.cpp
source/chapter15/graphics/: asynchronous_loader.cpp  command_buffer.cpp  command_buffer.hpp  frame_graph.cpp  frame_graph.hpp  gltf_scene.cpp  gpu_device.cpp  gpu_device.hpp  gpu_resources.hpp  obj_scene.cpp  obj_scene.hpp  render_resources_loader.cpp  render_resources_loader.hpp  render_scene.cpp  render_scene.hpp  renderer.cpp  renderer.hpp  scene_graph.hpp  spirv_parser.hpp
source/chapter15/shaders/: cloth.json  ddgi.glsl  ddgi.h  lighting.h  meshlet.glsl  pbr.glsl  platform.h  reflections.glsl  reflections.json  transparent.glsl  volumetric_fog.glsl  volumetric_fog.json
source/chapter2/: CMakeLists.txt  main.cpp
source/chapter2/graphics/: command_buffer.cpp  command_buffer.hpp  gpu_device.cpp  gpu_device.hpp  gpu_enum.hpp  gpu_resources.cpp  gpu_resources.hpp  raptor_imgui.cpp  raptor_imgui.hpp  renderer.cpp  renderer.hpp  spirv_parser.cpp  spirv_parser.hpp
source/chapter2/shaders/: main.frag
source/chapter3/: CMakeLists.txt  main.cpp
source/chapter3/graphics/: command_buffer.cpp  command_buffer.hpp  gpu_device.cpp  gpu_device.hpp  gpu_enum.hpp  gpu_profiler.cpp  gpu_resources.cpp  gpu_resources.hpp  raptor_imgui.cpp  renderer.cpp  renderer.hpp
source/chapter3/shaders/: main.frag  main.json  main.vert  phong.frag  phong.vert
source/chapter4/: CMakeLists.txt  graph.json  main.cpp
source/chapter4/graphics/: asynchronous_loader.cpp  asynchronous_loader.hpp  command_buffer.cpp  command_buffer.hpp  frame_graph.cpp  frame_graph.hpp  gltf_scene.cpp  gltf_scene.hpp  gpu_device.cpp  gpu_device.hpp  gpu_enum.hpp  gpu_profiler.cpp  gpu_profiler.hpp  gpu_resources.cpp  gpu_resources.hpp  obj_scene.cpp  obj_scene.hpp  raptor_imgui.cpp  render_resources_loader.cpp  (+8 more)
source/chapter5/: CMakeLists.txt  graph.json  main.cpp
source/chapter6/: CMakeLists.txt  graph_meshlet.json  main.cpp
source/chapter7/: CMakeLists.txt  graph.json  main.cpp
source/chapter8/: CMakeLists.txt  graph.json  main.cpp
source/chapter9/: CMakeLists.txt  graph.json  main.cpp
(+225 files in other folders)
